--- a/umg/Dockerfile
+++ b/umg/Dockerfile
@@ -1,26 +1,23 @@
-﻿# Etapa 1: Construcción
-FROM maven:3.9.9-eclipse-temurin-17 AS build
+﻿# Etapa 1: construir el proyecto con Maven y Java 17
+FROM maven:3.9.5-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copiar archivos de Maven
+# Copiar pom.xml y src
 COPY pom.xml .
 COPY src ./src
 
-# Compilar el proyecto
+# Compilar el proyecto sin perfiles extra
 RUN mvn clean package -DskipTests
 
-# Etapa 2: Imagen final (ligera)
+# Etapa 2: imagen liviana para ejecutar
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 
-# Copiar el jar compilado desde la etapa build
-COPY --from=build /app/target/*.jar app.jar
+# Copiar el jar generado
+COPY --from=build /app/target/login-0.0.1-SNAPSHOT.jar app.jar
 
-# Exponer el puerto (ajusta si tu app usa otro)
+# Exponer puerto
 EXPOSE 8080
 
-# Variables de entorno opcionales
-ENV JAVA_OPTS="-Xms256m -Xmx512m"
-
-# Ejecutar la aplicación
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+# Ejecutar
+ENTRYPOINT ["java", "-jar", "app.jar"]
